--- a/templates/base.html
+++ b/templates/base.html
@@ -111,9 +111,8 @@
     </nav>
   {% endblock %}
 
-
   {% block badge-dark %}
-  <div class="container-fluid bg-light pt-3 pb-1 rounded">
+  <div class="container-fluid bg-light pt-3 pb-1 rounded border-top border-bottom border-dark">
     <h2><span class="text-body">{{text_badge_dark}}</span></h2>
   </div>
   {% endblock %}
