control de acceso al cifrado

--- a/apps/bienvenida/templates/bienvenida/detalle_cerrada.html
+++ b/apps/bienvenida/templates/bienvenida/detalle_cerrada.html
@@ -1,49 +1,50 @@
 {% extends 'utils/detail.html' %}
 {% load static %}
 {% block div_card-body %}
-<div class="card text-white m-1" style="background-color: rgb(51, 51, 51); border-color: rgb(51, 51, 51); width: 100%;">
+<div class="card text-white border border-dark" style="height: 50%; width: 100%; background-color: rgb(51, 51, 51)">
   <div class="card-header font-weight-bold text-center">
-    Candidatos postulados:
+    Candidatos postulados: {{object.candidatos.count}}
   </div>
   <div class="card-body text-body">
-    <ul class="list-group">
-  {% for candidato in object.candidatos.all %}
-    <li class="list-group-item">
-      <div class="d-flex justify-content-between">
-        <p class="font-weight-bold">{{candidato.full_name}}</p>
-        <p class="font-weight-bold text-info">ID Nro {{candidato.pk}}</p>
-      </div>
-    </li>
-  {% endfor %}
-  {% include 'bienvenida/snippets/snippet_consultar_padron.html' %}
-</ul>
-</div>
-</div>
-{% endblock %}
-
-{% block news_rows %}
-<div class="container-fluid bg-dark">
-<div class="card bg-light text-body mb-2">
-  <div class="card-header">Detalles del padron</div>
-  <div class="card-body">
-    <ul class="list-group">
-      <li class="list-group-item text-body h5">
-        Electores empadronados: {{padron.empadronados}}
-      </li>
-      <li class="list-group-item text-dark h5">
-        Asistencias: {{padron.presentes}} sufragios _ {{padron.presentes_por_cien}}% del padrón
-      </li>
-      <li class="list-group-item text-dark h5">
-        Ausencias: {{padron.ausentes}} _ {{padron.ausentes_por_cien}}% del padrón
-      </li>
-      <li class="list-group-item text-dark h5">
-        Cierre de terminal de votación: {{urna.hora_cierre}}hs
-      </li>
-    </ul>
+      <ul class="list-group">
+        <li class="list-group-item">
+          {% for candidato in object.candidatos.all %}
+          <div class="d-flex justify-content-between mt-1">
+            <span class="font-weight-bold">{{candidato.full_name}}</span>
+            <span class="font-weight-bold text-info">ID Nro {{candidato.pk}}</span>
+          </div>
+          {% endfor %}
+        </li>
+      </ul>
   </div>
-  <div class="card-footer"></div>
+  <div class="card-footer bg-light">
+  </div>
 </div>
+
+<div class="card text-white border border-dark mt-2 " style="height: 50%; width: 100%; background-color: rgb(51, 51, 51)">
+  <div class="card-header font-weight-bold text-center">
+    INFORMACIÓN DEL PADRON
+  </div>
+  <div class="card-body text-body">
+      <ul class="list-group">
+        <li class="list-group-item mt-1">
+          <div class="d-flex justify-content-between">
+            <p class="font-weight-bold">Electores:</p>
+            <p class="font-weight-bold text-primary">{{object.padron.empadronados}}</p>
+          </div>
+          <div class="d-flex justify-content-between">
+            <p class="font-weight-bold">Asistencias:</p>
+            <p class="font-weight-bold"><span class="text-primary">{{padron.presentes}}</span> _ <span class="text-primary">{{padron.presentes_por_cien}}%</span> del padrón</p>
+          </div>
+          <div class="d-flex justify-content-between">
+            <p class="font-weight-bold">Ausencias:</p>
+            <p class="font-weight-bold"><span class="text-primary">{{padron.ausentes}}</span> _ <span class="text-primary">{{padron.ausentes_por_cien}}%</span> del padrón</p>
+          </div>
+        </li>
+        {% include 'bienvenida/snippets/snippet_consultar_padron.html' %}
+      </ul>
+  </div>
+  <div class="card-footer bg-light">
+  </div>
 </div>
 {% endblock %}
-{% comment %}
-{% endcomment %}
