--- a/apps/gest_votacion/templates/gest_votacion/ini_urna.html
+++ b/apps/gest_votacion/templates/gest_votacion/ini_urna.html
@@ -1,6 +1,8 @@
 {% extends 'utils/detail.html' %}
 {% load static %}
 
+{% block badge-dark %}{% endblock %}
+
 {% block container-fluid %}
 <form method='post'>
   {% csrf_token %}
