--- a/apps/bienvenida/templates/bienvenida/bienvenida.html
+++ b/apps/bienvenida/templates/bienvenida/bienvenida.html
@@ -26,7 +26,7 @@
 
 <!-- Ultimas y Proximas-->
   <div class="row">
-    <div class="col">
+    <div class="col mt-2">
       <div class="card bg-light border-dark" style="height: 100%; width: 100%;">
         <div class="card-header text-body">
           Ultimas elecciones
@@ -49,7 +49,7 @@
     <!-- ./Ultimas elecciones realizadas -->
 
     <!-- Proximas elecciones col-6 d-flex justify-content-center-->
-    <div class="col">
+    <div class="col mt-2">
       <div class="card bg-light border-dark" style="height: 100%; width: 100%;">
         <div class="card-header text-body">
           Proximas elecciones
