--- a/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_programacion.html
+++ b/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_programacion.html
@@ -2,6 +2,11 @@
 {% if object.es_programable == 5 %}
   <p class="font-weight-bold text-dark">Administrar programación</p>
   <a class="btn btn-info" href="{% url 'gest_programacion:adm-programar' object.id %}">Administrar</a>
-{% else %}
-<p class="font-weight-bold text-danger">>> AUN NO SE PUEDE PROGRAMAR</p>
+{% elif object.es_programable == 0 %}
+<p class="font-weight-bold text-danger"> AUN NO SE PUEDE PROGRAMAR
+  <br>La debe actualizar la fecha</p>
+{% elif object.es_programable == 1 %}
+<div class="bg-warning p-2 rounded">
+  <div class="text-body align-self-center"><strong>RECUERDE:</strong> El dia anterior a la fecha de la elección se habilita la programación de horarios</div>
+</div>
 {% endif %}
