--- a/apps/gest_preparacion/templates/gest_preparacion/padron_detail.html
+++ b/apps/gest_preparacion/templates/gest_preparacion/padron_detail.html
@@ -14,18 +14,18 @@
       <div class="col">
         <div class="card border border-dark">
           {% if object.electores.all %}
-            <form method="post">
-              {% csrf_token %}
-              <div class="card-header d-flex justify-content-around">
-                <p class="font-weight-bold">TABLA DE INCLUIDOS</p>
-                <button type="submit" name="button" value='quitar' class='btn btn-danger border-dark mx-2'>Quitar</button>
-              </div>
-          <div class="card-body">
-            <div class="table-responsive">
-              {% include 'gest_preparacion/snippets/snippet_table_padron.html' with id_data='data1' id_checkall='incluidos' object_list=object.electores.all name_imput='incluidos' %}
+          <form method="post">
+            {% csrf_token %}
+            <div class="card-header d-flex justify-content-around">
+              <p class="font-weight-bold">TABLA DE INCLUIDOS</p>
+              <button type="submit" name="button" value='quitar' class='btn btn-danger border-dark mx-2'>Quitar</button>
             </div>
-          </div>
-        </form>
+            <div class="card-body">
+              <div class="table-responsive">
+                {% include 'gest_preparacion/snippets/snippet_table_padron.html' with id_data='data1' id_checkall='incluidos' object_list=object.electores.all name_imput='incluidos' %}
+              </div>
+            </div>
+          </form>
           <div class="card-footer">
           </div>
           {% else %}
@@ -45,18 +45,18 @@
       <div class="col">
         <div class="card bordered border-dark">
           {% if no_incluidos.all %}
-            <form method="post">
-              {% csrf_token %}
-              <div class="card-header d-flex justify-content-around">
-                <p class="font-weight-bold">TABLA NO INCLUIDOS</p>
-                <button type="submit" name="button" value='agregar' class='btn btn-primary border-dark'>Agregar</button>
-              </div>
-          <div class="card-body">
-            <div class="table-responsive">
-              {% include 'gest_preparacion/snippets/snippet_table_padron.html' with id_data='data2' id_checkall='no_incluidos' object_list=no_incluidos.all name_imput='no_incluidos' %}
+          <form method="post">
+            {% csrf_token %}
+            <div class="card-header d-flex justify-content-around">
+              <p class="font-weight-bold">TABLA NO INCLUIDOS</p>
+              <button type="submit" name="button" value='agregar' class='btn btn-primary border-dark'>Agregar</button>
             </div>
-          </div>
-        </form>
+            <div class="card-body">
+              <div class="table-responsive">
+                {% include 'gest_preparacion/snippets/snippet_table_padron.html' with id_data='data2' id_checkall='no_incluidos' object_list=no_incluidos.all name_imput='no_incluidos' %}
+              </div>
+            </div>
+          </form>
           <div class="card-footer">
           </div>
           {% else %}
@@ -67,7 +67,7 @@
                 <h2 class="display-4">NO HAY ELECTORES EN CONDICIONES DE VOTAR</h2>
                 {% else %}
                 <h2 class="display-4">TODO LOS ELECTORES ESTAN EN EL PADRON<h2>
-                {% endif %}
+                    {% endif %}
               </div>
             </div>
           </div>
@@ -91,38 +91,42 @@
 <script>
   $(document).ready(function() {
     $('#data1').DataTable({
-      {% include 'utils/snippets/language_datatables.html' %}
+      {
+        % include 'utils/snippets/language_datatables.html' %
+      }
     });
   });
 
   $(document).ready(function() {
     $('#data2').DataTable({
-      {% include 'utils/snippets/language_datatables.html' %}
+      {
+        % include 'utils/snippets/language_datatables.html' %
+      }
     });
   });
 
   // Si se hace click sobre el input de tipo checkbox con id checkall_enabled
   $('#no_incluidos').click(function() {
-      // Si esta seleccionado (si la propiedad checked es igual a true)
-      if ($(this).prop('checked')) {
-          // Selecciona cada input que tenga la nombre .elector_enabled
-          $('input[name$="no_incluidos"]').prop('checked', true);
-      } else {
-          // Deselecciona cada input que tenga la clase .checar
-          $('input[name$="no_incluidos"]').prop('checked', false);
-      }
+    // Si esta seleccionado (si la propiedad checked es igual a true)
+    if ($(this).prop('checked')) {
+      // Selecciona cada input que tenga la nombre .elector_enabled
+      $('input[name$="no_incluidos"]').prop('checked', true);
+    } else {
+      // Deselecciona cada input que tenga la clase .checar
+      $('input[name$="no_incluidos"]').prop('checked', false);
+    }
   });
 
   // Si se hace click sobre el input de tipo checkbox con id checkall_enabled
   $('#incluidos').click(function() {
-      // Si esta seleccionado (si la propiedad checked es igual a true)
-      if ($(this).prop('checked')) {
-          // Selecciona cada input que tenga la nombre .elector_enabled
-          $('input[name$="incluidos"]').prop('checked', true);
-      } else {
-          // Deselecciona cada input que tenga la clase .checar
-          $('input[name$="incluidos"]').prop('checked', false);
-      }
+    // Si esta seleccionado (si la propiedad checked es igual a true)
+    if ($(this).prop('checked')) {
+      // Selecciona cada input que tenga la nombre .elector_enabled
+      $('input[name$="incluidos"]').prop('checked', true);
+    } else {
+      // Deselecciona cada input que tenga la clase .checar
+      $('input[name$="incluidos"]').prop('checked', false);
+    }
   });
 </script>
 {% endblock %}
