--- a/templates/utils/snippets/no_objetc_list.html
+++ b/templates/utils/snippets/no_objetc_list.html
@@ -4,21 +4,23 @@
   </div>
   <div class="card-body d-flex justify-content-center my-2">
     {% if estado == "activo" or estado == "inactivo" %}
-      <br><h2>No hay registros con estado {{estado}}</h2>
+    <br>
+    <h2>No hay registros con estado {{estado}}</h2>
   </div>
   <!-- /card-header -->
   <div class="card-footer d-flex justify-content-center">
     <a class="btn btn-block btn-secondary" href={% url url_listado %}>Todos los registros</a>
   </div>
   <!-- /card-body -->
-    {% else %}
-      <br><h2>{{message_no_queryset}}</h2>
-      </div>
-      <!-- /card-footer -->
-      <div class="card-footer d-flex justify-content-center">
-        <a class="btn btn-lg btn-primary" href={% url url_agregar %}>Registrar Ahora</a>
-      </div>
-      <!-- /card-footer -->
-    {% endif %}
+  {% else %}
+  <br>
+  <h2>{{message_no_queryset}}</h2>
+</div>
+<!-- /card-footer -->
+<div class="card-footer d-flex justify-content-center">
+  <a class="btn btn-lg btn-primary" href={% url url_agregar %}>Registrar Ahora</a>
+</div>
+<!-- /card-footer -->
+{% endif %}
 </div>
 <!-- /card -->
