--- a/apps/gest_usuario/templates/gest_usuario/snippets/no_objetc_list.html
+++ b/apps/gest_usuario/templates/gest_usuario/snippets/no_objetc_list.html
@@ -6,7 +6,8 @@
   <!-- ./card-header-->
   <!--card-body-->
   <div class="card-body d-flex justify-content-center my-2">
-    <br> <h2>{{message_no_queryset}}</h2>
+    <br>
+    <h2>{{message_no_queryset}}</h2>
   </div>
   <div class="card-footer d-flex justify-content-around">
     <a href="{% url url_listado_CE %}" class="btn btn-lg btn-primary border border-dark">
