--- a/apps/gest_votacion/templates/gest_votacion/mesa_ini.html
+++ b/apps/gest_votacion/templates/gest_votacion/mesa_ini.html
@@ -5,31 +5,32 @@
 {% if urna.estado_urna == 0 %}
 
 <div class="container bg-white">
-      <div class="card border border-dark mt-3">
-        <div class="card-header bg-light h1 text-center">
-          ESPERANDO EL INICIO DE LA URNA
-        </div>
-        <div class="card-body">
-          <div class="d-flex justify-content-between">
-            <p class="font-weight-bold">Los horarios de la eleccion son:<br>{{horarios}}</p>
-            <div class="bg-dark text-warning font-weight-bold p-4 rounded border border-warning" id="relojnumerico" onload="cargarReloj()">
-              <span><form name="form_reloj">
-                <input type="text" name="reloj" size="10" onfocus="window.document.form_reloj.reloj.blur()">
-              </form>
-            </span>
-          </div>
-        </div>
-        </div>
-        <div class="card-footer bg-light">
-          <form method="post">
-            {% csrf_token %}
-            <button type="submit" name="btn" class='btn btn-primary btn-block btn-lg'>
-              <h4>Actualizar</h4>
-            </button>
-          </form>
+  <div class="card border border-dark mt-3">
+    <div class="card-header bg-light h1 text-center">
+      ESPERANDO EL INICIO DE LA URNA
+    </div>
+    <div class="card-body">
+      <div class="d-flex justify-content-between">
+        <p class="font-weight-bold">Los horarios de la eleccion son:<br>{{horarios}}</p>
+        <div class="bg-dark text-warning font-weight-bold p-4 rounded border border-warning" id="relojnumerico" onload="cargarReloj()">
+          <span>
+            <form name="form_reloj">
+              <input type="text" name="reloj" size="10" onfocus="window.document.form_reloj.reloj.blur()">
+            </form>
+          </span>
         </div>
       </div>
     </div>
+    <div class="card-footer bg-light">
+      <form method="post">
+        {% csrf_token %}
+        <button type="submit" name="btn" class='btn btn-primary btn-block btn-lg'>
+          <h4>Actualizar</h4>
+        </button>
+      </form>
+    </div>
+  </div>
+</div>
 {% else %}
 <h1>BIENVENIDO</h1>
 {% endif %}
@@ -37,8 +38,8 @@
 
 {% block  script %}
 <script>
-// https://blog.nubecolectiva.com/como-crear-un-reloj-digital-numerico-con-javascript/
-function cargarReloj(){
+  // https://blog.nubecolectiva.com/como-crear-un-reloj-digital-numerico-con-javascript/
+  function cargarReloj() {
     // Haciendo uso del objeto Date() obtenemos la hora, minuto y segundo
     var fechahora = new Date();
     var hora = fechahora.getHours();
@@ -47,14 +48,14 @@ function cargarReloj(){
     // Variable meridiano con el valor 'AM'
     var meridiano = "AM";
     // Si la hora es igual a 0, declaramos la hora con el valor 12
-    if(hora == 0){
-        hora = 12;
+    if (hora == 0) {
+      hora = 12;
     }
     // Si la hora es mayor a 12, restamos la hora - 12 y mostramos la variable meridiano con el valor 'PM'
-    if(hora > 12) {
-        hora = hora - 12;
-        // Variable meridiano con el valor 'PM'
-        meridiano = "PM";
+    if (hora > 12) {
+      hora = hora - 12;
+      // Variable meridiano con el valor 'PM'
+      meridiano = "PM";
     }
     // Formateamos los ceros '0' del reloj
     hora = (hora < 10) ? "0" + hora : hora;
@@ -66,8 +67,8 @@ function cargarReloj(){
     document.getElementById("relojnumerico").textContent = tiempo;
     // Cargamos el reloj a los 500 milisegundos
     setTimeout(cargarReloj, 500);
-}
-// Ejecutamos la función 'CargarReloj'
-cargarReloj();
+  }
+  // Ejecutamos la función 'CargarReloj'
+  cargarReloj();
 </script>
 {% endblock %}
