--- a/apps/gest_preparacion/templates/gest_preparacion/padron_detail.html
+++ b/apps/gest_preparacion/templates/gest_preparacion/padron_detail.html
@@ -92,7 +92,7 @@
   $(document).ready(function() {
     $('#data1').DataTable({
       {
-        % include 'utils/snippets/language_datatables.html' %
+        {% include 'utils/snippets/language_datatables.html' %}
       }
     });
   });
@@ -100,7 +100,7 @@
   $(document).ready(function() {
     $('#data2').DataTable({
       {
-        % include 'utils/snippets/language_datatables.html' %
+        {% include 'utils/snippets/language_datatables.html' %}
       }
     });
   });
