--- a/templates/utils/detail.html
+++ b/templates/utils/detail.html
@@ -54,6 +54,11 @@
     {% endblock %}
   </div>
 </div>
+
+<div class="row">
+  {% block extra-rows %}
+  {% endblock %}
+</div>
 {% endblock %}
 
 <!-- ./body-->
