--- a/apps/gest_preparacion/templates/gest_preparacion/mesa_detail.html
+++ b/apps/gest_preparacion/templates/gest_preparacion/mesa_detail.html
@@ -14,16 +14,16 @@
   <div class="card-body text-dark">
     <div class="row mt-2 d-flex">
       <div class="col">
-        <div class="card bordered border-dark" style="height: 100%;">
-          <div class="card-header d-flex justify-content-center">
+        <div class="card border-dark" style="height: 100%;">
+          <div class="card-header bg-dark text-white text-center">
             <p class="font-weight-bold">Autoridad Designada</p>
           </div>
+          <div class="card-body d-flex justify-content-around border border-dark">
           {% if object.cuenta %}
-          <div class="card-body d-flex justify-content-around">
             <h2>Usuario:</h2>
             <h2><b>{{object.cuenta}}</b></h2>
           </div>
-          <div class="card-footer">
+          <div class="card-footer bg-dark">
           </div>
           {% else %}
           <div class="card-body">
