--- a/apps/gest_preparacion/templates/gest_preparacion/padron_detail.html
+++ b/apps/gest_preparacion/templates/gest_preparacion/padron_detail.html
@@ -1,6 +1,8 @@
 {% extends 'utils/detail.html' %}
 {% load static %}
 
+{% block badge-dark%}{% endblock %}
+
 {% block container-fluid %}
 <div class="card text-white border border-dark">
   <div class="card-header" style="background-color: rgb(51, 51, 51); border-color: rgb(51, 51, 51);">
@@ -12,7 +14,7 @@
   <div class="card-body text-dark">
     <div class="row mt-2">
       <div class="col">
-        <div class="card border border-dark">
+        <div class="card border border-dark" style="height: 100%">
           {% if object.electores.all %}
           <form method="post">
             {% csrf_token %}
@@ -29,13 +31,17 @@
           <div class="card-footer">
           </div>
           {% else %}
+          <div class="card-header"></div>
           <div class="card-body">
-            <div class="jumbotron jumbotron-fluid bg-warning">
+            <div class="jumbotron jumbotron-fluid bg-warning text-body">
               <div class="container">
                 <h2 class="display-4">PADRON VACIO</h2>
+                <p>No hay elecotres incluidos en el padrón</p>
+                <p>Seleccione electores de la <strong>TABLA DE NO INCLUIDOS</strong> y presione <strong>Agregar</strong></p>
               </div>
             </div>
           </div>
+          <div class="card-footer"></div>
           {% endif %}
         </div>
       </div>
@@ -43,7 +49,7 @@
 
       <!-- NO INCLUIDOS-->
       <div class="col">
-        <div class="card bordered border-dark">
+        <div class="card bordered border-dark" style="height: 100%">
           {% if no_incluidos.all %}
           <form method="post">
             {% csrf_token %}
@@ -60,16 +66,20 @@
           <div class="card-footer">
           </div>
           {% else %}
+          <div class="card-header">
+          </div>
           <div class="card-body">
-            <div class="jumbotron jumbotron-fluid bg-warning">
-              <div class="container">
-                {% if object.vacio %}
-                <h2 class="display-4">NO HAY ELECTORES EN CONDICIONES DE VOTAR</h2>
-                {% else %}
-                <h2 class="display-4">TODO LOS ELECTORES ESTAN EN EL PADRON<h2>
-                    {% endif %}
+              <div class="jumbotron jumbotron-fluid bg-warning text-body text-center">
+                <div class="container">
+                  {% if object.vacio %}
+                  <h2 class="display-4">NO HAY ELECTORES EN CONDICIONES DE VOTAR</h2>
+                  {% else %}
+                  <h2 class="display-4">TODO LOS ELECTORES ESTAN EN EL PADRON<h2>
+                  {% endif %}
               </div>
             </div>
+          </div>
+          <div class="card-footer">
           </div>
           {% endif %}
         </div>
