--- a/templates/utils/snippets/language_datatables.html
+++ b/templates/utils/snippets/language_datatables.html
@@ -1,7 +1,7 @@
 "language": {
-"lengthMenu": "Mostrar _MENU_ registros por página",
+"lengthMenu": "_MENU_ filas por página",
 "zeroRecords": "Nothing found - sorry",
-"info": "Mostrando página _PAGE_ of _PAGES_",
+"info": "Mostrando página _PAGE_ de _PAGES_",
 "infoEmpty": "No hay registros",
 "infoFiltered": "(filtered from _MAX_ total records)",
 "paginate": {
